# IEC-61850-Studio

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  fuzz.yml  installers.yml  interop.yml  release.yml  supply-chain.yml
apps/iec61850-gui/: Cargo.toml  README.md
apps/iec61850-gui/src/: app.rs  backend.rs  main.rs
apps/iec61850-sim/: Cargo.toml
apps/iec61850-sim/src/: main.rs
apps/iec61850-tauri/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  setcap.sh  vite.config.ts
apps/iec61850-tauri/scripts/: smoke-windows.ps1
apps/iec61850-tauri/src/: App.tsx  iec61850.ts  main.tsx  model.ts  styles.css
apps/iec61850-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/iec61850-tauri/src-tauri/capabilities/: default.json
apps/iec61850-tauri/src-tauri/icons/: icon.icns
apps/iec61850-tauri/src-tauri/scripts/: pkg-postinst.sh
apps/iec61850-tauri/src-tauri/src/: lib.rs  main.rs
apps/iec61850-tauri/src/components/: DetailPanel.tsx  OperBoard.tsx  TreeView.tsx
apps/iec61850-tauri/test-certs/: README.txt  ca.crt.pem  ca.crt.srl  ca.key.pem  client.crt.pem  client.key.pem  server.crt.pem  server.key.pem
crates/iec61850/: Cargo.toml
crates/iec61850-ber/: Cargo.toml
crates/iec61850-ber/src/: data.rs  error.rs  lib.rs
crates/iec61850-ber/src/ber/: length.rs  mod.rs  prim.rs  reader.rs  tag.rs  writer.rs
crates/iec61850-goose/: Cargo.toml
crates/iec61850-goose/examples/: goose_monitor.rs  goose_publish.rs
crates/iec61850-goose/src/: config.rs  error.rs  frame.rs  lib.rs  pdu.rs  publisher.rs  subscriber.rs
crates/iec61850-goose/tests/: pcap_corpus.rs  pubsub_mock.rs
crates/iec61850-l2/: Cargo.toml
crates/iec61850-l2/examples/: pcap_capture.rs
crates/iec61850-l2/src/: auth.rs  error.rs  eth.rs  keystore.rs  lib.rs  link.rs  pcap.rs  sign.rs  socket.rs  socket_windows.rs
crates/iec61850-mms/: Cargo.toml
crates/iec61850-mms/examples/: ied_sim.rs  mms_explore.rs
crates/iec61850-mms/src/: client.rs  control.rs  error.rs  lib.rs  mapping.rs  server.rs
crates/iec61850-mms/src/mms/: data.rs  file.rs  get_name_list.rs  identify.rs  initiate.rs  journal.rs  mod.rs  named_var_list.rs  pdu.rs  read.rs  report.rs  token.rs  type_attr.rs  write.rs
crates/iec61850-mms/src/transport/: connection.rs  cotp.rs  mod.rs  tls.rs  tpkt.rs
crates/iec61850-mms/src/upper/: acse.rs  mod.rs  presentation.rs  session.rs
crates/iec61850-mms/tests/: client_loopback.rs  interop_client.rs  server_loopback.rs  tls_loopback.rs
crates/iec61850-model/: Cargo.toml
crates/iec61850-model/src/: basic_type.rs  cdc.rs  fc.rs  lib.rs  model.rs  quality.rs  reference.rs  value.rs
crates/iec61850-model/src/tree/: control.rs  data_attribute.rs  data_object.rs  logical_device.rs  logical_node.rs  mod.rs  server.rs
crates/iec61850-scl/: Cargo.toml
crates/iec61850-scl/examples/: scl_audit.rs  scl_roundtrip.rs
crates/iec61850-scl/src/: error.rs  lib.rs  resolve.rs  validate.rs  write.rs
crates/iec61850-scl/src/model/: communication.rs  control.rs  ied.rs  instance.rs  mod.rs  scl.rs  substation.rs  templates.rs
crates/iec61850-scl/src/parse/: mod.rs
crates/iec61850-scl/tests/: external_corpus.rs  parse_resolve.rs  vendor_quirks.rs
crates/iec61850-sv/: Cargo.toml
crates/iec61850-sv/examples/: sv_monitor.rs  sv_publish.rs
crates/iec61850-sv/src/: config.rs  error.rs  frame.rs  lib.rs  nine_two_le.rs  pdu.rs  publisher.rs  subscriber.rs
crates/iec61850-sv/tests/: pcap_corpus.rs  pubsub_mock.rs
crates/iec61850/examples/: scl_dump.rs
crates/iec61850/src/: config.rs  lib.rs
crates/iec61850/tests/: config_from_scl.rs
docs/: scl-support.md  secure-deployment.md  threat-model.md
docs/manual/: README.md  manual-usuario-app.html
fixtures/icd/: interleaved.icd  simple.icd
fixtures/pcap/: README.md  goose.pcap  sv.pcap
fuzz/: Cargo.toml  README.md
fuzz/corpus/ber_data/: float32  visible
fuzz/corpus/scl_parse/: goose_sv.scd
fuzz/corpus/tpkt_cotp/: tpkt_min
fuzz/fuzz_targets/: ber_data.rs  goose_pdu.rs  mms_request.rs  scl_parse.rs  sv_pdu.rs  tpkt_cotp.rs
interop/: Dockerfile.libiec61850  README.md  docker-compose.yml
scripts/: cap-runner.sh
