[package]
name = "iec61850-l2"
description = "Capa 2 común de IEC 61850: cabecera Ethernet/802.1Q/APPID y socket AF_PACKET, compartidos por GOOSE y SV."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Enlace de capa 2 + async (tokio): AF_PACKET vía libc en Linux, Npcap
# (wpcap.dll cargada en runtime vía libloading) en Windows. La cabecera
# (eth.rs) compila y se testea sin esta feature.
net = ["dep:libc", "dep:tokio", "dep:libloading"]
# Firma asimétrica ECDSA P-256 de tramas GOOSE/SV (IEC 62351-6:2020). Trae el
# crate auditado `p256` (RustCrypto); sin la feature, la dependencia no entra y
# solo queda la autenticación HMAC-SHA256 (que es propia, sin dependencias).
ecdsa = ["dep:p256"]

[dependencies]
thiserror = { workspace = true }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "sync", "time"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }

# Backend AF_PACKET (Linux/Unix): libc.
[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

# Backend Npcap (Windows): wpcap.dll cargada en runtime.
[target.'cfg(windows)'.dependencies]
libloading = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }

[[example]]
name = "pcap_capture"
required-features = ["net"]

# Única excepción del workspace a unsafe_code=forbid: syscalls AF_PACKET (libc).
[lints.rust]
missing_docs = "warn"
